--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,3 +20,33 @@ body {
 .MuiGrid-item-39 .colorPapel {
   margin: 20px;
 }
+
+div .leftItem {
+  padding-left: 0px;
+}
+
+.boxUserDetails .listUserDetails {
+  padding: 0px
+}
+
+div .iconInfo {
+  margin-right: 10px;
+  color: #f50357;
+}
+
+.container .titleUser {
+  margin-top: 20px;
+}
+
+.linkStyle {
+  text-decoration: none;
+}
+
+.userForm .eleTextField {
+  margin: 20px 20px 20px 0;
+}
+
+.userForm .containeRowUser {
+  margin: 0px; 
+  padding: 0px;
+}
