--- a/src/css/index.css
+++ b/src/css/index.css
@@ -70,3 +70,9 @@ div .bodyFilter {
 div .headerFilter {
   padding: 0px;
 }
+.bodyTable tr:first-child td{
+  font-weight: bold;
+}
+.bodyTable tr td{
+  font-weight: 100;
+}
