tablas genericas y mapa empezado

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -76,3 +76,10 @@ div .headerFilter {
 .bodyTable tr td{
   font-weight: 100;
 }
+.popUpForm .MuiDialog-paper-28{
+  max-width: 1000px;
+  width: 80%;
+}
+.mapColum {
+  margin: 20px;
+}
