--- a/src/css/index.css
+++ b/src/css/index.css
@@ -76,7 +76,7 @@ div .headerFilter {
 .bodyTable tr td{
   font-weight: 100;
 }
-.popUpForm .MuiDialog-paper-28{
+.popUpForm .MuiDialog-paperWidthSm-30{
   max-width: 1000px;
   width: 80%;
 }
